src/test/deca/context/invalid/LE/A_verifier_si_ces_validecast1.deca
// Historique:
//    cree le 19/01/2022

class c1 {

}

class c2 extends c1{

}

{
    c2 variable ;
    c1 var = (c1) (variable) ;
}